# HiveParser

./: CMakeLists.txt  CMakeSettings.json  README.md
HiveParser/: CMakeLists.txt  HiveParserModule.cpp  HiveParserModule.h  HqlFunction.cpp  HqlFunction.h  Main.cpp  hql_exprs.cpp  hql_exprs.h  hql_functions.cpp  hql_functions.h  hql_stmts.cpp  hql_stmts.h  hql_types.cpp  hql_types.h  module.cpp  setup.py.in  utils.cpp  utils.h
HiveParser/grammar/: C++ Shell.html  Hive.g4  HiveOriginal.g4  Hive_old.g4
HiveParser/grammar/.antlr/: Hive.interp  Hive.tokens  HiveLexer.interp  HiveLexer.java  HiveLexer.tokens  HiveParser.java  HplsqlLexer.java  Sql.interp  Sql.tokens  SqlLexer.interp  SqlLexer.java  SqlParser.java
HiveParser/grammar/C++ Shell_files/: css
HiveParser/third_part/: CMakeLists.txt
HiveParser/third_part/nlohmann_json/: CMakeLists.txt
HiveParser/third_part/nlohmann_json/single_include/nlohmann/: json.hpp
python_module/: LICENSE  MANIFEST.in  README.md  setup.py
python_module/hiveparser/: RESULT.json  __init__.py  hiveparser_c.cp37-win32.pyd  hiveparser_c.cp37-win_amd64.pyd
python_module/hiveparser.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: query_exemplo.sql  test.py  test_1.sql
